# thermistor

./: CMakeLists.txt  main.c
